--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/itemList"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintStart_toStartOf="parent"
